--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <title>Raspberry Pi Air Quality Monitor</title>
+    <title>RP-SDS011 Air Quality Monitor</title>
+
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -15,12 +16,12 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h1>Raspberry Pi Air Quality Monitor</h1>
+                <h1>RP-SDS011 Air Quality Monitor</h1>
             </div>
         </div>
         <div class="row">
             <div class="col-12">
-                <canvas id="historicalChart" width="400" height="200"></canvas>
+                <canvas id="historicalChart" width="1200" height="600"></canvas>
             </div>
         </div>
     </div>
@@ -31,7 +32,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.3.2/chart.min.js" integrity="sha512-VCHVc5miKoln972iJPvkQrUYYq7XpxXzvqNfiul1H4aZDwGBGC0lq373KNleaB2LpnC2a/iNfE5zoRYmB4TRDQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script>
-        
+
         $.getJSON('/api/', function(data) {
             var ctx = document.getElementById('historicalChart').getContext('2d');
             var historicalChart = new Chart(ctx, {
@@ -45,14 +46,21 @@
                         y: {
                             beginAtZero: true
                         }
+                    },
+                    elements:{
+                        point:{
+                            borderWidth: 0,
+                            radius: 0,
+                            backgroundColor: 'rgba(0,0,0,0)'
+                        }
                     }
                 }
             });
         })
-        
-        
+
+
         </script>
-        
+
 
 
 </body>
