--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -47,6 +47,14 @@
                             borderWidth: 0,
                             radius: 0,
                             backgroundColor: 'rgba(0,0,0,0)'
+                        },
+                    },
+                    scales:{
+                        y:{
+                            title:{
+                                display: true,
+                                text: 'μg/m³'
+                            }
                         }
                     }
                 }
