--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -48,6 +48,9 @@
                             radius: 0,
                             backgroundColor: 'rgba(0,0,0,0)'
                         },
+                        line:{
+                            borderWidth: 1
+                        }
                     },
                     scales:{
                         y:{
@@ -56,7 +59,7 @@
                                 text: 'μg/m³'
                             }
                         }
-                    }
+                    },
                 }
             });
         })
